# merlin

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  weekly.yml
config/: example.env  example.yaml
docs/: sql_schema.md
src/: __init__.py  app.py  db.py
src/resources/: __init__.py  kmymoney_schema.sql
tests/: __init__.py  test_app.py
